page 4 alignment fixed and final_repost.txt file added.

--- a/page.css
+++ b/page.css
@@ -29,40 +29,78 @@ ul {
     margin-top: 0;
 }
 
-#scatterplot {
-    width: 600px;
-    height: 400px;
-    margin: 20px auto;
-    position: relative;
-    border: 1px solid #aaa;
-    background-color: lightblue;
-    border-width: 5px;
-  }
-  
-  #generateButton,
-  #showCurve,
-  #changeShape {
-    display: block;
-    margin: 20px auto;
-    padding: 10px 20px;
-    font-size: 16px;
-  }
-  
-  .axis-label {
-    position: absolute;
-    font-size: 14px;
-    font-weight: bold;
-  }
-  
-  .x-axis-label {
-    bottom: -20px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  .y-axis-label {
-    top: 50%;
-    transform: translateY(-50%) rotate(-90deg);
-    left: -40px;
-  }
+/* Inti's page4 style css do not change */
+
+#results {
+  margin-top: 20px;
+}
+
+#data {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+#demoData, #surveyedData {
+  flex: 1;
+}
+
+#demoData ul, #surveyedData ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+#demoData h3, #surveyedData h3 {
+  text-align: left;
+}
+
+
+
+
+/* Style the accordion */
+.accordion {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  overflow: hidden;
+
+}
+
+/* Style the buttons inside the accordion */
+.accordion-btn {
+  background-color: lightblue;
+  color: black;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: background-color 0.3s ease;
+}
+
+/* Style the button when hovered */
+.accordion button:hover {
+  background-color: #ddd;
+}
+
+/* Style the accordion panel */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 800px;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+
+}
+
+/* Show the panel when the button is clicked */
+.active {
+  max-height: 800px; /* Adjust as needed */
+}
+
+
+
+
   
